--- a/model_config.json
+++ b/model_config.json
@@ -1,7 +1,7 @@
 {
   "models": [
     {
-      "model_name": "glm",
+      "model_name": "GLM",
       "model_url": "https://open.bigmodel.cn/api/coding/paas/v4",
       "api_key": "your_glm_api_key_here",
       "temperature": 0.7,
