--- a/model_config.json
+++ b/model_config.json
@@ -15,14 +15,14 @@
       "max_tokens": 1000
     },
     {
-      "model_name": "kimi",
+      "model_name": "Kimi",
       "model_url": "https://api.kimi.com/coding/",
       "api_key": "your_kimi_api_key_here",
       "temperature": 0.7,
       "max_tokens": 1000
     },
     {
-      "model_name": "doubao",
+      "model_name": "Doubao",
       "model_url": "https://ark.cn-beijing.volces.com/api/coding",
       "api_key": "your_doubao_api_key_here",
       "temperature": 0.7,
@@ -94,6 +94,13 @@
     {
       "model_name": "AIgoCode-Codex",
       "model_url": "https://api.aigocode.com/openai",
+      "api_key": "",
+      "temperature": 0.7,
+      "max_tokens": 4096
+    },
+    {
+      "model_name": "GACCode",
+      "model_url": "https://gaccode.com/claudecode",
       "api_key": "",
       "temperature": 0.7,
       "max_tokens": 4096
